--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^5.24.2",
+    "three": "^0.126.0",
+    "webpack": "^5.24.2"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^3.11.2"
   }
 }
